--- a/pages/sigcomsl/index.html
+++ b/pages/sigcomsl/index.html
@@ -265,6 +265,8 @@
 
       <p>Aqui você encontra o material de apoio às aulas de uma disciplina de Pós-Graduação sobre “Introdução ao SIG com Software Livre”, ministrada no Programa de Pós-Graduação em Ciência Ambiental (PROCAM) do Instituto de Energia e Ambiente da USP e no Programa de Pós-Graduação em Recursos Minerais e Hidrogeologia (RMH) do Instituto de Geociências da USP.</p>
 
+<p>Todo o material disponível nesta página também pode ser acessado pelo sistema de <a rel="noopener noreferrer" target="_blank" href="https://edisciplinas.usp.br/course/view.php?id=85711">e-disciplinas da USP</a> (o acesso é aberto a todos, não é necessário fazer login).</p>
+
 <p>Os vídeos estão todos nesta <a rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/playlist?list=PL9GztlLGb7RpQbw2_W9MxVdBfDtPKSy-G">playlist do YouTube</a></p>
 
 <p>  </p>
@@ -292,6 +294,7 @@
   <li>(TXT) <a href="../../downloads/sigcomsl_dados/xyz_tiles_qgis3.txt">xyz_tiles_qgis3.txt</a></li>
   <li>(CSV) <a href="../../downloads/sigcomsl_dados/CSV_pontos_petar.csv">CSV_pontos_petar.csv</a></li>
   <li>(CSV) <a href="../../downloads/sigcomsl_dados/CSV_interpola_davis.txt">CSV_interpola_davis.txt</a></li>
+  <li>(GPX) <a href="../../downloads/sigcomsl_dados/GPS_petar_2016_08_21.gpx">GPS_petar_2016_08_21.gpx</a></li>
   <li>(ZIP) <a href="../../downloads/sigcomsl_dados/mapas_topograficos.zip">mapas_topograficos.zip</a></li>
   <li>(ZIP) <a href="../../downloads/sigcomsl_dados/SHP_analise_vetor.zip">SHP_analise_vetor.zip</a></li>
   <li>(ZIP) <a href="../../downloads/sigcomsl_dados/SHP_brasil_cartografia.zip">SHP_brasil_cartografia.zip</a></li>
@@ -305,13 +308,13 @@
 <p>  </p>
 <h2 id="videos">Videos</h2>
 
-<p>Aula 1 - Introdução ao SIG e a Software Livre</p>
-<iframe width="700" height="395" src="https://www.youtube.com/embed/V61_LQZpz60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-<p><br /></p>
+<!-- Aula 1 - Introdução ao SIG e a Software Livre
+<iframe width="700" height="395" src="https://www.youtube.com/embed/V61_LQZpz60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
 
-<p>Aula 2 - Princípios de Cartografia</p>
-<iframe width="700" height="395" src="https://www.youtube.com/embed/2a9O724Me6A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-<p><br /></p>
+Aula 2 - Princípios de Cartografia 
+<iframe width="700" height="395" src="https://www.youtube.com/embed/2a9O724Me6A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br> -->
 
 
 
