updates to pubs and students

--- a/pages/students/index.html
+++ b/pages/students/index.html
@@ -311,7 +311,12 @@ period: 2019-? | program: RMH</p>
 <p><strong>Rafael Walter de Albuquerque</strong><br />
 <a rel="noopener noreferrer" target="_blank" href="http://orcid.org/0000-0002-4294-5876">ORCiD</a> | <a rel="noopener noreferrer" target="_blank" href="http://lattes.cnpq.br/1122324819287451">Lattes CV</a><br />
 Remotely Piloted Aircrafts in assessment and monitoring of areas in environmental recovery process<br />
-period: 2018-? | program: PROCAM | scholarship: CAPES PROEX<br />
+period: 2018-? | program: PROCAM | scholarship: CAPES PROEX</p>
+
+<p><strong>Rebeca Durço Coelho</strong><br />
+<a rel="noopener noreferrer" target="_blank" href="http://orcid.org/0000-0003-2131-8862">ORCiD</a> | <a rel="noopener noreferrer" target="_blank" href="http://lattes.cnpq.br/6253625584264789">Lattes CV</a><br />
+Study of Morphometry and Geotechnical Properties in Landslides Deflagration<br />
+period: 2021-? | program: RMH
  <br />
  </p>
 
