updates to gis class

--- a/pages/sigcomsl/index.html
+++ b/pages/sigcomsl/index.html
@@ -270,18 +270,63 @@
 <p>Os vídeos estão todos nesta <a rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/playlist?list=PL9GztlLGb7RpQbw2_W9MxVdBfDtPKSy-G">playlist do YouTube</a></p>
 
 <p>  </p>
-<h2 id="slides-das-aulas">Slides das aulas</h2>
+<h2 id="aulas">Aulas</h2>
 
 <ul>
-  <li>Aula 1 - <a href="../../downloads/sigcomsl_dados/aula_01_intro_sig_2021.pdf">Introdução ao SIG e a Software Livre</a></li>
-  <li>Aula 2 - <a href="../../downloads/sigcomsl_dados/aula_02_cartografia_2021.pdf">Princípios de Cartografia</a></li>
-  <li>Aula 3 - <a href="../../downloads/sigcomsl_dados/aula_03_tipos_dados_2021.pdf">Tipo de dados, entrada de dados</a></li>
-  <li>Aula 4 - <a href="../../downloads/sigcomsl_dados/aula_04_vetor_2021.pdf">Dados Vetoriais</a></li>
-  <li>Aula 5 - <a href="../../downloads/sigcomsl_dados/aula_05_raster_2021.pdf">Dados Raster</a></li>
-  <li>Aula 6 - <a href="../../downloads/sigcomsl_dados/aula_07_interpolacao_2021.pdf">Interpolação</a></li>
-  <li>Aula 7 - <a href="../../downloads/sigcomsl_dados/aula_08_mdt_2021.pdf">Modelos Digitais de Elevação</a></li>
-  <li>Aula 8 - <a href="../../downloads/sigcomsl_dados/aula_09_sensoriamento_2021.pdf">Sensoriamento Remoto</a></li>
-  <li>Aula 9 - <a href="../../downloads/sigcomsl_dados/aula_10_grass_2021.pdf">GRASS-GIS</a></li>
+  <li>
+    <p>Aula 1<br />
+Slides - <a href="../../downloads/sigcomsl_dados/aula_01_intro_sig_2021.pdf">Introdução ao SIG e a Software Livre</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/V61_LQZpz60">Introdução ao SIG e a Software Livre</a></p>
+  </li>
+  <li>
+    <p>Aula 2<br />
+Slides - <a href="../../downloads/sigcomsl_dados/aula_02_cartografia_2021.pdf">Princípios de Cartografia</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/TNTPO1vTEoE">Princípios de Cartografia</a></p>
+  </li>
+  <li>
+    <p>Aula 3<br />
+Slides - <a href="../../downloads/sigcomsl_dados/aula_03_tipos_dados_2021.pdf">Tipo de dados, entrada de dados</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/J0YBk-oD6jo">Dados e Metadados</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/siL_RJg3pPY">Exercício - Georreferenciamento</a></p>
+  </li>
+  <li>
+    <p>Aula 4<br />
+Slides - <a href="../../downloads/sigcomsl_dados/aula_04_vetor_2021.pdf">Dados Vetoriais</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/G4gepdqPOWo">Dados Vetoriais</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/gkXE5AQzwrM">Edição de Dados Vetoriais</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/lnx5W7ULUwk">Vetores - Arquivos CSV e GPX, mais dois plugins muito úteis</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/DHXn_qG8qm4">Exercício - municípios do Brasil</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/l8iuvJchGpI">Exercício - Seleção por localização, atributos e buffers vetoriais com MMQGIS</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/JMER9LTJpU4">Exercício - Densidade de população com união de tabelas</a></p>
+  </li>
+  <li>
+    <p>Aula 5<br />
+Slides - <a href="../../downloads/sigcomsl_dados/aula_05_raster_2021.pdf">Dados Raster</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/Xyv1XIuZkdQ">Dados tipo Raster</a></p>
+  </li>
+  <li>
+    <p>Aula 6<br />
+Slides - <a href="../../downloads/sigcomsl_dados/aula_06_interpolacao_2021.pdf">Interpolação</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/tB-VrcrLM8Y">Interpolação</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/ASzSV_ND01A">Exercício - interpolação</a></p>
+  </li>
+  <li>
+    <p>Aula 7<br />
+Slides - <a href="../../downloads/sigcomsl_dados/aula_07_mdt_2021.pdf">Modelos Digitais de Elevação</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/KDlsy7_9CBo">Modelos Digitais de Elevação</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/tBVrcrLM8Y">Exercício - Análise Digital de Terreno (Geomorfometria)</a></p>
+  </li>
+  <li>
+    <p>Aula 8<br />
+Slides - <a href="../../downloads/sigcomsl_dados/aula_08_sensoriamento_2021.pdf">Sensoriamento Remoto</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/eq4aLMffP9g">Sensoriamento Remoto</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/Z8345GjEC4k">Imagens multibandas (layer stack) no QGIS</a><br />
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/zg-CbRA3qTA">Exercício - Sensoriamento Remoto</a></p>
+  </li>
+  <li>
+    <p>Aula 9<br />
+Slides - <a href="../../downloads/sigcomsl_dados/aula_09_grass_2021.pdf">GRASS-GIS</a></p>
+  </li>
 </ul>
 
 <p>  </p>
@@ -307,63 +352,63 @@
 </ul>
 
 <p>  </p>
-<h2 id="videos">Videos</h2>
 
-<p>Aula 1 - Introdução ao SIG e a Software Livre</p>
-<iframe width="700" height="395" src="https://www.youtube.com/embed/V61_LQZpz60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-<p><br /></p>
+<!-- 
+Aula 1 - Introdução ao SIG e a Software Livre
+<iframe width="700" height="395" src="https://www.youtube.com/embed/V61_LQZpz60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
 
-<p>Aula 2 - Princípios de Cartografia</p>
-<iframe width="700" height="395" src="https://www.youtube.com/embed/TNTPO1vTEoE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-<p><br /></p>
+Aula 2 - Princípios de Cartografia 
+<iframe width="700" height="395" src="https://www.youtube.com/embed/TNTPO1vTEoE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
 
-<p>Aula 3 - Dados e Metadados</p>
-<iframe width="700" height="395" src="https://www.youtube.com/embed/J0YBk-oD6jo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-<p><br /></p>
+Aula 3 - Dados e Metadados 
+<iframe width="700" height="395" src="https://www.youtube.com/embed/J0YBk-oD6jo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
 
-<p>Aula 3.1 - Prática de Georreferenciamento</p>
-<iframe width="700" height="395" src="https://www.youtube.com/embed/siL_RJg3pPY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-<p><br /></p>
+Aula 3.1 - Prática de Georreferenciamento
+<iframe width="700" height="395" src="https://www.youtube.com/embed/siL_RJg3pPY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
 
-<p>Aula 4 - Dados Vetoriais</p>
-<iframe width="700" height="395" src="https://www.youtube.com/embed/G4gepdqPOWo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-<p><br /></p>
+Aula 4 - Dados Vetoriais
+<iframe width="700" height="395" src="https://www.youtube.com/embed/G4gepdqPOWo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
 
-<p>Aula 4.1 - Edição de Dados Vetoriais</p>
-<iframe width="700" height="395" src="https://www.youtube.com/embed/gkXE5AQzwrM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-<p><br /></p>
+Aula 4.1 - Edição de Dados Vetoriais 
+<iframe width="700" height="395" src="https://www.youtube.com/embed/gkXE5AQzwrM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
 
-<p>Aula 4.2 - Vetores - Arquivos CSV e GPX, mais dois plugins muito úteis</p>
-<iframe width="700" height="395" src="https://www.youtube.com/embed/lnx5W7ULUwk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-<p><br /></p>
+Aula 4.2 - Vetores - Arquivos CSV e GPX, mais dois plugins muito úteis
+<iframe width="700" height="395" src="https://www.youtube.com/embed/lnx5W7ULUwk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
 
-<p>Aula 4.3 - Exercício com vetores - municípios do Brasil</p>
-<iframe width="700" height="395" src="https://www.youtube.com/embed/DHXn_qG8qm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-<p><br /></p>
+Aula 4.3 - Exercício com vetores - municípios do Brasil
+<iframe width="700" height="395" src="https://www.youtube.com/embed/DHXn_qG8qm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
 
-<p>Aula 4.4 - Vetores - Seleção por localização, atributos e buffers vetoriais com MMQGIS</p>
-<iframe width="700" height="395" src="https://www.youtube.com/embed/l8iuvJchGpI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-<p><br /></p>
+Aula 4.4 - Vetores - Seleção por localização, atributos e buffers vetoriais com MMQGIS
+<iframe width="700" height="395" src="https://www.youtube.com/embed/l8iuvJchGpI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
 
-<p>Aula 4.5 - Vetores - Densidade de população com união de tabelas</p>
-<iframe width="700" height="395" src="https://www.youtube.com/embed/JMER9LTJpU4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-<p><br /></p>
+Aula 4.5 - Vetores - Densidade de população com união de tabelas
+<iframe width="700" height="395" src="https://www.youtube.com/embed/JMER9LTJpU4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
 
-<p>Aula 5 - Dados tipo Raster</p>
-<iframe width="700" height="395" src="https://www.youtube.com/embed/Xyv1XIuZkdQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-<p><br /></p>
+Aula 5 - Dados tipo Raster
+<iframe width="700" height="395" src="https://www.youtube.com/embed/Xyv1XIuZkdQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
 
-<p>Aula 6 - Interpolação</p>
-<iframe width="700" height="395" src="https://www.youtube.com/embed/tB-VrcrLM8Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-<p><br /></p>
+Aula 6 - Interpolação
+<iframe width="700" height="395" src="https://www.youtube.com/embed/tB-VrcrLM8Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
 
-<p>Aula 6.1 - Exercício de interpolação</p>
-<iframe width="700" height="395" src="https://www.youtube.com/embed/ASzSV_ND01A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-<p><br /></p>
+Aula 6.1 - Exercício de interpolação
+<iframe width="700" height="395" src="https://www.youtube.com/embed/ASzSV_ND01A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
 
-<p>Aula 7 - Modelos Digitais de Elevação</p>
-<iframe width="700" height="395" src="https://www.youtube.com/embed/KDlsy7_9CBo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-<p><br /></p>
+Aula 7 - Modelos Digitais de Elevação
+<iframe width="700" height="395" src="https://www.youtube.com/embed/KDlsy7_9CBo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br> -->
 
 <!-- Aula 7.1 - Exercício de Análise Digital de Terreno (Geomorfometria)
 <iframe width="700" height="395" src="https://www.youtube.com/embed/tBVrcrLM8Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
