updates to class and publications

--- a/pages/outreach/index.html
+++ b/pages/outreach/index.html
@@ -17,7 +17,7 @@
   <meta name="author" content="Carlos H. Grohmann">
   
 
-  <meta name="description" content="My outreach activities are related with the SPAMLab projects. Check out the [Videos](https://spamlab.github.io/outreach/videos/) and [Media News](https://spamlab.github.io/outreach/news/) pages for the whole list. &amp;nbsp;&amp;nbsp; ## Videos GGEO Live - 3D Cave Mapping Garopaba dunes 3D model flight Repórter ECO - mapeamento 3D da Caverna do Diabo Pesquisadores realizam mapeamento 3D da Caverna...">
+  <meta name="description" content="My outreach activities are related with the SPAMLab projects. Check out the [Videos](https://spamlab.github.io/outreach/videos/) and [Media News](https://spamlab.github.io/outreach/news/) pages for the whole list. &amp;nbsp;&amp;nbsp; ## Videos 3 dicas de ouro para SIG! Submissão de artigo no OJS (Publicando ciência #3) Preparando a submissão do artigo (Publicando ciência #2) Como funciona a revisão...">
 
   
 
@@ -117,7 +117,7 @@
   
   <meta property="og:site_name" content="Home">
   <meta property="og:title" content="Outreach">
-  <meta property="og:description" content="My outreach activities are related with the SPAMLab projects. Check out the [Videos](https://spamlab.github.io/outreach/videos/) and [Media News](https://spamlab.github.io/outreach/news/) pages for the whole list. &amp;nbsp;&amp;nbsp; ## Videos GGEO Live - 3D Cave Mapping Garopaba dunes 3D model flight Repórter ECO - mapeamento 3D da Caverna do Diabo Pesquisadores realizam mapeamento 3D da Caverna...">
+  <meta property="og:description" content="My outreach activities are related with the SPAMLab projects. Check out the [Videos](https://spamlab.github.io/outreach/videos/) and [Media News](https://spamlab.github.io/outreach/news/) pages for the whole list. &amp;nbsp;&amp;nbsp; ## Videos 3 dicas de ouro para SIG! Submissão de artigo no OJS (Publicando ciência #3) Preparando a submissão do artigo (Publicando ciência #2) Como funciona a revisão...">
 
   
   <meta property="og:image" content="http://carlosgrohmann.com/img/doodle_crop.jpg">
@@ -136,7 +136,7 @@
   <meta name="twitter:creator" content="@CarlosGrohmann">
 
   <meta property="twitter:title" content="Outreach">
-  <meta property="twitter:description" content="My outreach activities are related with the SPAMLab projects. Check out the [Videos](https://spamlab.github.io/outreach/videos/) and [Media News](https://spamlab.github.io/outreach/news/) pages for the whole list. &amp;nbsp;&amp;nbsp; ## Videos GGEO Live - 3D Cave Mapping Garopaba dunes 3D model flight Repórter ECO - mapeamento 3D da Caverna do Diabo Pesquisadores realizam mapeamento 3D da Caverna...">
+  <meta property="twitter:description" content="My outreach activities are related with the SPAMLab projects. Check out the [Videos](https://spamlab.github.io/outreach/videos/) and [Media News](https://spamlab.github.io/outreach/news/) pages for the whole list. &amp;nbsp;&amp;nbsp; ## Videos 3 dicas de ouro para SIG! Submissão de artigo no OJS (Publicando ciência #3) Preparando a submissão do artigo (Publicando ciência #2) Como funciona a revisão...">
 
   
   <meta name="twitter:image" content="http://carlosgrohmann.com/img/doodle_crop.jpg">
@@ -263,6 +263,22 @@ Check out the <a rel="noopener noreferrer" target="_blank" href="https://spamlab
 
 <p>  </p>
 <h2 id="videos">Videos</h2>
+
+<p>3 dicas de ouro para SIG!</p>
+<iframe width="700" height="395" src="https://www.youtube.com/embed/Tt7cx2Oazj4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<p><br /></p>
+
+<p>Submissão de artigo no OJS (Publicando ciência #3)</p>
+<iframe width="700" height="395" src="https://www.youtube.com/embed/6OAXx7KFxs0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<p><br /></p>
+
+<p>Preparando a submissão do artigo (Publicando ciência #2)</p>
+<iframe width="700" height="395" src="https://www.youtube.com/embed/cDS1_q8FxLU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<p><br /></p>
+
+<p>Como funciona a revisão de um artigo científico?</p>
+<iframe width="700" height="395" src="https://www.youtube.com/embed/Q8c5bVG7fn4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<p><br /></p>
 
 <p>GGEO Live - 3D Cave Mapping</p>
 <iframe width="700" height="395" src="https://www.youtube.com/embed/U73C-In4dfs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
