--- a/pages/sigcomsl/index.html
+++ b/pages/sigcomsl/index.html
@@ -270,7 +270,7 @@
 <p>Os vídeos estão todos nesta <a rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/playlist?list=PL9GztlLGb7RpQbw2_W9MxVdBfDtPKSy-G">playlist do YouTube</a></p>
 
 <p>  </p>
-<h2 id="aulas">Aulas</h2>
+<h2 id="aulas---qgis">Aulas - QGIS</h2>
 
 <ul>
   <li>
@@ -325,9 +325,14 @@ Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/zg-
   </li>
   <li>
     <p>Aula 9<br />
-Slides - <a href="../../downloads/sigcomsl_dados/aula_09_grass_2021.pdf">GRASS-GIS</a></p>
+Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/CmPWnjkdSMo">Como fazer mapas no QGIS</a></p>
   </li>
 </ul>
+
+<!-- - Aula 10  
+Slides - [GRASS-GIS](../../downloads/sigcomsl_dados/aula_09_grass_2021.pdf)  
+
+ -->
 
 <p>  </p>
 <h2 id="material-de-apoio-para-exercícios">Material de apoio para exercícios</h2>
