small fix to outreach

--- a/pages/outreach/index.html
+++ b/pages/outreach/index.html
@@ -274,7 +274,8 @@ Check out the <a rel="noopener noreferrer" target="_blank" href="https://spamlab
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/Gx5JYjxyg5Y">04 - Tudo sobre Acesso Aberto (Open Access)</a></li>
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be//9sm-BeWanUo">05 - Submissão de artigo no SciELO / ScholarOne</a></li>
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/ZpEX6JTQU1o">06 - Análise de plágio de artigos científicos</a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/vnAeelLZ--0">07 - O quê é ORCiD? Precisa mesmo ter um? (SIM!)</a><br />
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/vnAeelLZ--0">07 - O quê é ORCiD? Precisa mesmo ter um? (SIM!)</a></li>
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/DS0HydVh8Bg">08 - Periódicos Predatórios</a><br />
  </li>
 </ul>
 
