--- a/pages/sigcomsl/index.html
+++ b/pages/sigcomsl/index.html
@@ -265,7 +265,7 @@
 
       <p>Aqui você encontra o material de apoio às aulas de uma disciplina de Pós-Graduação sobre “Introdução ao SIG com Software Livre”, ministrada no Programa de Pós-Graduação em Ciência Ambiental (PROCAM) do Instituto de Energia e Ambiente da USP e no Programa de Pós-Graduação em Recursos Minerais e Hidrogeologia (RMH) do Instituto de Geociências da USP.</p>
 
-<p>Todo o material disponível nesta página também pode ser acessado pelo sistema de <a rel="noopener noreferrer" target="_blank" href="https://edisciplinas.usp.br/course/view.php?id=85711">e-disciplinas da USP</a> (o acesso é aberto a todos, não é necessário fazer login).</p>
+<p>Todo o material disponível nesta página também pode ser acessado pelo sistema de <a rel="noopener noreferrer" target="_blank" href="https://edisciplinas.usp.br/course/view.php?id=85711">e-disciplinas da USP</a>. O acesso é aberto a todos, não é necessário fazer login.</p>
 
 <p>Os vídeos estão todos nestas duas playlists do YouTube: <a rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/playlist?list=PL9GztlLGb7RpQbw2_W9MxVdBfDtPKSy-G">aulas de QGIS</a> e <a rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/playlist?list=PL9GztlLGb7RovKMMO2ohYdfxfILXjxwEy">aulas de GRASS-GIS</a>.</p>
 
@@ -338,8 +338,7 @@ Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/CmP
   <li>Slides - <a href="../../downloads/sigcomsl_dados/aulagrass_2021.pdf">GRASS-GIS</a></li>
   <li>Apostila - <a rel="noopener noreferrer" target="_blank" href="http://dx.doi.org/10.6084/m9.figshare.3502184">GRASS-GIS (2016)</a></li>
   <li>
-    <p>Texto - <a rel="noopener noreferrer" target="_blank" href="https://grass.osgeo.org/gdp/raster/mapcalc-algebra.pdf">Shapiro &amp; Westervelt, 1992 - r.mapcalc: An Algebra for GIS and Image Processing</a><br />
- </p>
+    <p>Texto - <a rel="noopener noreferrer" target="_blank" href="https://grass.osgeo.org/gdp/raster/mapcalc-algebra.pdf">Shapiro &amp; Westervelt, 1992 - r.mapcalc: An Algebra for GIS and Image Processing</a></p>
   </li>
   <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/qvkjqPPFjIM">01 - Conhecendo o GRASS-GIS (histórico e conceitos básicos)</a></li>
   <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/R6uqkN9j4bc">02 - Location, maspset e visão geral do sistema</a></li>
