--- a/pages/outreach/index.html
+++ b/pages/outreach/index.html
@@ -283,6 +283,7 @@ Check out the <a rel="noopener noreferrer" target="_blank" href="https://spamlab
 
 <h3 id="demix-project">DEMIX project</h3>
 <ul>
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/YQQY6LIxosU">O artigo mais importante sobre Modelos de Elevação</a></li>
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/veZA4O1rU28">DEMIX - The Digital Elevation Model Intercomparison EXperiment</a><br />
  </li>
 </ul>
@@ -290,6 +291,14 @@ Check out the <a rel="noopener noreferrer" target="_blank" href="https://spamlab
 <h3 id="gis-tips">GIS tips</h3>
 <ul>
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/Tt7cx2Oazj4">3 dicas de ouro para SIG!</a><br />
+ </li>
+</ul>
+
+<h3 id="lives">Lives</h3>
+<ul>
+  <li>Live - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/_pohWjE4eiA">O fascinante mundo do GRASS-GIS (Geocast BR)</a></li>
+  <li>Live - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/vp6frd89y9E">O Fascinante Mundo do GRASS (Prof. Gustavo Baptista - Ao Vivo no YouTube #6)</a></li>
+  <li>Podcast - <a rel="noopener noreferrer" target="_blank" href="https://anchor.fm/profgustavobaptista/episodes/Episdio-89---O-Fascinante-Mundo-do-GRASS-e17e6da">O Fascinante Mundo do Sensoriamento Remoto (Prof. Gustavo Baptista)</a><br />
  </li>
 </ul>
 
@@ -350,7 +359,8 @@ Check out the <a rel="noopener noreferrer" target="_blank" href="https://spamlab
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/JSMYjjsBEGo">GRASS 04 - Visualização 3D</a></li>
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/rgutNeD3nkE">GRASS 05 - Álgebra de mapas raster (r.mapcalc)</a></li>
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/Sk02h1P_PPA">GRASS 06 - Dados vetoriais</a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/Sk02h1P_PPA">GRASS 07 - Máscaras</a><br />
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/ECRFyrSEmtI">GRASS 07 - Máscaras</a></li>
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/gUIagGIEEhA">GRASS 08 - Instalando Extensões (add-ons)</a><br />
  </li>
 </ul>
 
