--- a/pages/sigcomsl/index.html
+++ b/pages/sigcomsl/index.html
@@ -352,7 +352,7 @@ Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/CmP
   <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/rgutNeD3nkE">05 - Álgebra de mapas raster (r.mapcalc)</a></li>
   <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/Sk02h1P_PPA">06 - Dados vetoriais</a></li>
   <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/ECRFyrSEmtI">07 - Máscaras</a></li>
-  <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/playlist?list=PL9GztlLGb7RovKMMO2ohYdfxfILXjxwEy">08 - Instalando Extensões (add-ons)</a></li>
+  <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/gUIagGIEEhA">08 - Instalando Extensões (add-ons)</a></li>
   <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/playlist?list=PL9GztlLGb7RovKMMO2ohYdfxfILXjxwEy">09 - Sensoriamento Remoto 1 - pré-processamento e correção atmosférica</a></li>
   <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/playlist?list=PL9GztlLGb7RovKMMO2ohYdfxfILXjxwEy">10 - Sensoriamento Remoto 2 - detecção de mudanças e classificação</a><br />
 <br /></li>
